src/objects/KS_Oferta_pendiente__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Recoge los destinatarios de ofertas, relacionando cliente vs oferta</description>
    <fields>
        <fullName>KS_Cliente_Name__c</fullName>
        <formula>KS_Cuenta__r.Name</formula>
        <label>Nombre Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Contacto_Name__c</fullName>
        <formula>KS_Contacto__r.FirstName + &apos; &apos; + KS_Contacto__r.LastName</formula>
        <label>Contacto Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Contacto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.KS_Cuenta__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registros de ofertas enviadas</relationshipLabel>
        <relationshipName>Registros_de_ofertas_enviadas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Creador_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Creador Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Cuenta_Direccion__c</fullName>
        <formula>KS_Cuenta__r.BillingStreet + &apos; &apos; + KS_Cuenta__r.BillingCity + &apos; &apos; + KS_Cuenta__r.BillingState + &apos; &apos; + KS_Cuenta__r.BillingPostalCode + &apos; &apos; + KS_Cuenta__r.BillingCountry</formula>
        <label>Cuenta Dirección</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Destinatarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Detalle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imprimir detalles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_impresion__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de impresión</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra_Name__c</fullName>
        <formula>KS_Obra__r.Name</formula>
        <label>Obra Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Registros de ofertas enviadas</relationshipLabel>
        <relationshipName>Registros_de_ofertas_enviadas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oferta__c</fullName>
        <label>Oferta</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Registros de ofertas enviadas</relationshipLabel>
        <relationshipName>Destinatarios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Registro de ofertas enviadas</label>
    <nameField>
        <displayFormat>DES-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registros de ofertas enviadas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>